# electron-test

./: .gitignore  BUG_FIX_GUIDE.md  CLAUDE.md  INSTALL.md  QA_ARTIFACTS.md  QA_REPORT.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.md  _build_monolith.py  coverage.json  install.ps1  install.sh  llm_detector.spec  pyproject.toml  requirements.txt  run_detector
.github/: copilot-instructions.md
.github/workflows/: build.yml
beet/electron/: README.md  installer.nsi  nosign.js  package-lock.json  package.json  tsconfig.json
beet/gui/: index.html  package-lock.json  package.json  vite.config.ts
benchmarks/: fairness_eval.py
dist_single/: beet_serve.py  llm_detector.py
docs/: analyzers.md  architecture.md  channels.md  configuration.md  fusion.md  infrastructure.md  interfaces.md  lexicon.md  pipeline.md  testing.md
llm_detector/: __init__.py  __main__.py  _constants.py  baselines.py  calibration.py  cli.py  compat.py  dashboard.py  fusion.py  gui.py  html_report.py  io.py  language_gate.py  memory.py  ml_fusion.py  normalize.py  pipeline.py  reporting.py  server.py  similarity.py  text_utils.py
llm_detector/lexicon/: packs.py  (+2 more)
tests/: conftest.py  test_analyzers.py  test_baselines_collection.py  test_calibration.py  test_channels_prompt_structure.py  test_channels_stylometric.py  test_cli.py  test_continuation_local.py  test_dashboard_rerun.py  test_dna_truncation.py  test_fusion.py  test_fusion_edge_cases.py  test_gui_dashboard_features.py  test_hf_token.py  test_html_report.py  test_io_loaders.py  test_lexicon.py  test_mattr_burstiness.py  test_memory.py  test_ml_fusion.py  test_ml_mocked.py  test_normalize.py  test_pipeline.py  test_preamble_cot.py  test_prompt_structure_channel.py  test_reporting.py  test_semantic_flow.py  test_similarity.py  test_stylometric_channel.py  test_token_cohesiveness.py  test_windowed.py  test_xray_spans.py
(+35 files in other folders)
